--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-ai-saas",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,11 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/fetch-event-source": "^2.0.1",
     "@clerk/nextjs": "^4.27.2",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@pinecone-database/pinecone": "1.1.0",
+    "pdf-parse": "1.1.1",
+    "langchain": "^0.0.186",
+    "dotenv": "^16.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^2.2.28",
     "axios": "^1.6.2",
@@ -38,6 +44,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "tsx": "^3.12.3",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
