--- a/package.json
+++ b/package.json
@@ -7,31 +7,35 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --ignore-path .gitignore \"**/*.+(ts|js|tsx)\" --write",
+    "ingest": "tsx -r dotenv/config scripts/ingest-data.ts"
   },
   "dependencies": {
-    "@microsoft/fetch-event-source": "^2.0.1",
     "@clerk/nextjs": "^4.27.2",
     "@hookform/resolvers": "^3.3.2",
+    "@microsoft/fetch-event-source": "^2.0.1",
+    "@pinecone-database/pinecone": "1.1.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
-    "@pinecone-database/pinecone": "1.1.0",
-    "pdf-parse": "1.1.1",
-    "langchain": "^0.0.186",
-    "dotenv": "^16.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^2.2.28",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.0.3",
+    "langchain": "^0.0.186",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
     "openai": "^4.20.1",
+    "pdf-parse": "1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^8.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
@@ -44,8 +48,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "tsx": "^3.12.3",
     "tailwindcss": "^3.3.0",
+    "tsx": "^3.12.3",
     "typescript": "^5"
   }
 }
