--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
     "tsx": "^3.12.3",
     "typescript": "^5"
