--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,8 @@ PDF_PATH=
 INDEX_INIT_TIMEOUT=240000
 
 REPLICATE_API_TOKEN=
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL=
