--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@pinecone-database/pinecone": "1.1.0",
+    "@prisma/client": "^5.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "ai": "^2.2.28",
