--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,4 @@ REPLICATE_API_TOKEN=
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=
+STRIPE_API_KEY=
