--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@upstash/redis": "^1.27.1",
     "ai": "^2.2.28",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "langchain": "^0.0.186",
     "lucide-react": "^0.293.0",
     "next": "14.0.3",
