--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@hookform/resolvers": "^3.3.2",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@pinecone-database/pinecone": "1.1.0",
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.7.1",
+    "@prisma/extension-accelerate": "^0.6.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
